--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A very simple firebase visual portfolio",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "node",
